<resources>

    <string name="app_name">Capoeira song</string>
    <string name="action_settings">Settings</string>
    <string name="lang_settings">Language</string>
    <string name="lang_fr">Français</string>
    <string name="lang_pt">Portuguêse</string>
    <string name="lang_en">English</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_detail">Song detail</string>
    <string name="connection_error">Connection error</string>

</resources>